# mini-gpt

./: .gitignore  README.md  notes.txt  pyproject.toml  todos.txt
.nvim/: init.lua
src/: main.py  model.py  params.py
src/model/: attention_head.py  feed_forward.py  gpt.py  transformer.py
