[project]
name = "mini-gpt"
version = "0.1.0"
description = ""
authors = [{ name = "Kyle Doidge", email = "kyle.blue.doidge@gmail.com" }]
requires-python = "==3.12.9"
readme = "README.md"
dependencies = [
    "torch>=2.6.0,<3",
    "numpy>=2.2.4,<3",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

